--- a/JavaWEB/JSLearn/DAY6/08-员工列表.html
+++ b/JavaWEB/JSLearn/DAY6/08-员工列表.html
@@ -250,7 +250,7 @@
                         <tr class="listrow">
                             <td>金瑞冲</td>
                             <td>
-                                <span class="gender-icon male"></span>男
+                                <span class="gender-icon male">男</span>
                             </td>
                             <td>👨‍💼</td>
                             <td><span class="position-tag">讲师</span></td>
